--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@quasar/extras": "^1.16.4",
     "@supabase/supabase-js": "1.35.7",
     "quasar": "^2.8.0",
+    "uuid": "^9.0.1",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
   },
